# Knoto-ID

./: .gitignore  CMakeLists.txt  LICENSES  README.md  RELEASE_NOTES.txt
doc/: CMakeLists.txt  README.txt  bibliography.bib  reference.tex  theory.tex  tutorial.tex  user_guide.tex  variables_cmake.tex.in
examples/: 3KZN_chain_A.xyz  3_1L_diagram_Gauss.txt  3_1L_diagram_open_PD.txt  3_1L_diagram_planar_Gauss.txt  3_1R.xyz  3_1_diagram_closed_PD.txt  3_1_diagram_open_planar_PD.txt  3_1m_supercoiled.xyz  5_2m.xyz  CMakeLists.txt  Invalid_diagram_open_PD.txt  README  Unbalanced_diagram_open.txt  knot_names.txt  knotoid_names.txt  knotoid_names_planar.txt  knotoid_names_planar_arrow.txt  knotoid_names_sphere.txt  knotoid_names_sphere_arrow.txt  projections_list_100.txt
scripts/: CMakeLists.txt  pdb_to_xyz.R  plot_3D_curve.R  plot_diagram.R  plot_knotted_core.R  plot_projection_map.R
src/: CMakeLists.txt  KnotoidNames.hh  PlanarDiagram.cpp  PlanarDiagram.hh  PlanarGraph.cpp  PlanarGraph.hh  Polygon.cpp  Polygon.hh  Polynomial.cpp  Polynomial.hh  PolynomialInvariant.cpp  PolynomialInvariant.hh  Random.cpp  Random.hh  Version.h.in  configure_knotoid_names.cmake  main.cpp  main.h  main_convert.cpp  main_convert.h  main_knotted_core.cpp
tests/: CMakeLists.txt  generate_tests
tests/input/: input0.xyz  input2.xyz  input3.xyz  input4.xyz  input5.xyz  input6.xyz  input7.xyz  input8.xyz  input9.xyz  input_diagram_closed_0.txt  input_diagram_closed_1.txt  input_diagram_gauss_closed_0.txt  input_diagram_gauss_open_plane_0.txt  input_diagram_gauss_open_plane_1.txt  input_diagram_gauss_open_sphere_0.txt  input_diagram_gauss_open_sphere_1.txt  input_diagram_open_plane_0.txt  input_diagram_open_plane_1.txt  input_diagram_open_sphere_0.txt  input_diagram_open_sphere_1.txt  input_knot_names.txt  input_knotoid_names.txt  input_projections.txt
tests/output/: convert_diagram_0.txt  convert_diagram_1.txt  convert_diagram_10.txt  convert_diagram_100.txt  convert_diagram_101.txt  convert_diagram_102.txt  convert_diagram_103.txt  convert_diagram_104.txt  convert_diagram_105.txt  convert_diagram_106.txt  convert_diagram_107.txt  convert_diagram_108.txt  convert_diagram_109.txt  convert_diagram_11.txt  convert_diagram_110.txt  convert_diagram_111.txt  convert_diagram_112.txt  convert_diagram_113.txt  convert_diagram_114.txt  convert_diagram_115.txt  convert_diagram_116.txt  convert_diagram_117.txt  convert_diagram_118.txt  convert_diagram_119.txt  convert_diagram_12.txt  convert_diagram_120.txt  convert_diagram_121.txt  convert_diagram_122.txt  convert_diagram_123.txt  convert_diagram_124.txt  convert_diagram_125.txt  convert_diagram_126.txt  convert_diagram_127.txt  convert_diagram_128.txt  convert_diagram_129.txt  convert_diagram_13.txt  convert_diagram_130.txt  convert_diagram_131.txt  convert_diagram_132.txt  convert_diagram_133.txt  (+543 more)
